--- a/angularPDF/demo/package.json
+++ b/angularPDF/demo/package.json
@@ -25,6 +25,8 @@
     "@fortawesome/fontawesome-svg-core": "^1.2.29",
     "@fortawesome/free-brands-svg-icons": "^5.13.1",
     "@fortawesome/free-solid-svg-icons": "^5.13.1",
+    "angular-font-awesome": "^3.1.2",
+    "font-awesome": "^4.7.0",
     "ng-inline-svg": "^10.1.0",
     "ng2-pdf-viewer": "^6.3.2",
     "ngx-indexed-db": "^5.0.5",
