--- a/angularPDF/demo/package.json
+++ b/angularPDF/demo/package.json
@@ -20,6 +20,12 @@
     "@angular/platform-browser": "~10.0.2",
     "@angular/platform-browser-dynamic": "~10.0.2",
     "@angular/router": "~10.0.2",
+    "@fortawesome/angular-fontawesome": "^0.7.0",
+    "@fortawesome/fontawesome-svg-core": "^1.2.29",
+    "@fortawesome/free-brands-svg-icons": "^5.13.1",
+    "@fortawesome/free-solid-svg-icons": "^5.13.1",
+    "angular-font-awesome": "^3.1.2",
+    "font-awesome": "^4.7.0",
     "ng-inline-svg": "^10.1.0",
     "ng2-pdf-viewer": "^6.3.2",
     "ngx-indexed-db": "^5.0.5",
