--- a/angularPDF/demo/package.json
+++ b/angularPDF/demo/package.json
@@ -11,26 +11,23 @@
   },
   "private": true,
   "dependencies": {
+    "-": "0.0.1",
     "@angular/animations": "~10.0.2",
-    "@angular/cdk": "^10.0.1",
+    "@angular/cdk": "^10.1.2",
     "@angular/common": "~10.0.2",
     "@angular/compiler": "~10.0.2",
     "@angular/core": "~10.0.2",
     "@angular/forms": "~10.0.2",
+    "@angular/material": "^10.1.2",
     "@angular/platform-browser": "~10.0.2",
     "@angular/platform-browser-dynamic": "~10.0.2",
     "@angular/router": "~10.0.2",
-    "@fortawesome/angular-fontawesome": "^0.7.0",
-    "@fortawesome/fontawesome-svg-core": "^1.2.29",
-    "@fortawesome/free-brands-svg-icons": "^5.13.1",
-    "@fortawesome/free-solid-svg-icons": "^5.13.1",
-    "angular-font-awesome": "^3.1.2",
-    "font-awesome": "^4.7.0",
+    "angular": "^1.8.0",
     "ng-inline-svg": "^10.1.0",
     "ng2-pdf-viewer": "^6.3.2",
     "ngx-indexed-db": "^5.0.5",
-    "ngx-sharebuttons": "^8.0.0",
     "rxjs": "~6.5.5",
+    "save": "^2.4.0",
     "tslib": "^2.0.0",
     "zone.js": "~0.10.3"
   },
